just fixing the videos rendering off screen

--- a/public/main.css
+++ b/public/main.css
@@ -46,6 +46,13 @@ ol ol {
 header a p {
 	text-align: center;
 }
+video {
+  width: 100%;
+  height: auto;
+}
+body{
+  padding: 16px;
+}
 #axioms {
   margin-top: 3vh;
   margin-bottom: 15vw;
